fix styles on chat page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,8 @@
 
 @layer base {
   :root {
+    height:   100vh;
+    overflow: hidden;
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
@@ -65,5 +67,16 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .hidden-scrollbar {
+    -ms-overflow-style: none; /* IE, Edge 対応 */
+    scrollbar-width: none; /* Firefox 対応 */
+  }
+  .hidden-scrollbar::-webkit-scrollbar {
+    /* Chrome, Safari 対応 */
+    display: none;
   }
 }
